// Copyright 2017 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pb;

import "github.com/getamis/service-broker/broker/pb/types.proto";

service Broker {
	rpc GetCatalog(Empty) returns (Catalog) {}
	rpc GetServiceInstance(ServiceInstanceRequest) returns (ServiceInstanceResponse) {}
	rpc CreateServiceInstance(ServiceInstanceRequest) returns (ServiceInstanceResponse) {}
	rpc RemoveServiceInstance(ServiceInstanceRequest) returns (Empty) {}
	rpc Bind(ServiceBindingRequest) returns (ServiceBindingResponse) {}
	rpc Unbind(ServiceBindingRequest) returns (ServiceBindingResponse) {}
}